# SecurityBOT

./: README.md  pyproject.toml
src/: .env  main.py
